--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,29 @@
     "react-dom": "^16.3.2"
   },
   "scripts": {
-    "dev": "webpack --mode development ./src/index.js --output ./dist/main.js --module-bind js=babel-loader",
-    "build": "webpack --mode production ./src/index.js --output ./dist/main.js --module-bind js=babel-loader"
+    "dev": "webpack-dev-server --mode development ./src/index.js --output ./dist/main.js --module-bind js=babel-loader --port 1137 --contentBase='./dist'",
+    "build:dev": "webpack --mode development ./src/index.js --output ./dist/main.js --module-bind js=babel-loader",
+    "build:prod": "webpack --mode production ./src/index.js --output ./dist/main.js --module-bind js=babel-loader",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-jest": "^21.15.1",
+    "eslint-plugin-react": "^7.7.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.5",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.4"
   }
 }
