--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,6 +1,3 @@
-**/.vscode
-**/node_modules
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,3 +101,6 @@ ENV/
 .mypy_cache/
 
 .idea/
+
+#vscode
+.vscode/**
