--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,24 +3,8 @@ FROM node:9.11.1-alpine
 RUN npm install -g yarn
 
 RUN mkdir /code
-WORKDIR /code/
 
 ADD package.json yarn.lock /code/
-WORKDIR /code/
 RUN yarn
 ADD . /code/
-RUN yarn build:dev
-
-
-# RUN npm install webpack -g
-# WORKDIR /tmp
-# COPY package.json /tmp/
-# RUN npm config set registry http://registry.npmjs.org/ && npm install
-# WORKDIR /usr/src/app
-# COPY . /usr/src/app/
-# RUN cp -a /tmp/node_modules /usr/src/app/
-# RUN webpack
-# ENV NODE_ENV=production
-# ENV PORT=4000
-# CMD [ “/usr/local/bin/node”, “./index.js” ]
-# EXPOSE 4000
+WORKDIR /code/client
