--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "react-dom": "^16.3.2"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development ./src/index.js --output ./dist/main.js --module-bind js=babel-loader --port 1137 --contentBase='./dist'",
-    "build:dev": "webpack --mode development ./src/index.js --output ./dist/main.js --module-bind js=babel-loader",
+    "dev": "webpack-dev-server --mode development",
+    "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production ./src/index.js --output ./dist/main.js --module-bind js=babel-loader",
     "precommit": "lint-staged"
   },
@@ -28,6 +28,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-react": "^7.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.5",
     "webpack": "^4.6.0",
