--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,8 +11,8 @@ services:
       context: ./server/
       dockerfile: Dockerfile
     command: pipenv shell
-    command: python ./server/manage.py migrate
-    command: python ./server/manage.py runserver 0.0.0.0:8000
+    command: python manage.py migrate
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
@@ -24,6 +24,10 @@ services:
     build:
       context: ./client/
       dockerfile: Dockerfile
+    command: yarn dev --port 1338
+    ports:
+      - "1338:1338"
+      - "49153:49153"
     volumes:
       - .:/code
     depends_on:
