apollo implemented React fetching data from the server CORS for using django as graphql endpoint: whitelist only in dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,6 +15,8 @@ services:
     command: pipenv shell
     command: python manage.py migrate    
     command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      - DJANGO_DEVELOPMENT=true
     volumes:
       - .:/code
     ports:
