--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-boost": "^0.1.6",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2"
   },
   "scripts": {
