--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,7 @@ services:
     command: python manage.py migrate    
     command: python manage.py runserver 0.0.0.0:8000
     environment:
-      - DJANGO_DEVELOPMENT=true
+      - DJANGO_SETTINGS_MODULE=taskboard.settings_dev
     volumes:
       - .:/code
     ports:
