--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,6 +29,8 @@ services:
       - "8000:8000"
     depends_on:
       - client
+    environment:
+      - DJANGO_SETTINGS_MODULE=taskboard.settings_prod
 
 volumes:
   postgres_data:
